# teo-follow-me

./: .gitignore  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  README.md
.github/workflows/: ci.yml
doc/: Doxyfile  follow-me-install.md  groups.dox  teo-follow-me-install.md
doc/fig/editable/: README.md  teo-follow-me-app.graphml
libraries/: CMakeLists.txt
libraries/FollowMeCommandsIDL/: CMakeLists.txt  FollowMeCommands.thrift
programs/: CMakeLists.txt  FollowMeVocabs.hpp
programs/followMeArmExecution/: CMakeLists.txt  FollowMeArmExecution.cpp  FollowMeArmExecution.hpp  main.cpp
programs/followMeDialogueManager/: CMakeLists.txt  FollowMeDialogueManager.cpp  FollowMeDialogueManager.hpp  StateMachine.cpp  StateMachine.hpp  main.cpp
programs/followMeHeadExecution/: CMakeLists.txt  FollowMeHeadExecution.cpp  FollowMeHeadExecution.hpp  InCvPort.cpp  InCvPort.hpp  InDialoguePortProcessor.cpp  InDialoguePortProcessor.hpp  main.cpp
scripts/gnome/: teo-follow-me.desktop
share/: CMakeLists.txt
share/app/follow-me/scripts/: follow-me_english.xml  follow-me_english_with_microphone.xml  follow-me_spanish.xml  follow-me_spanish_with_microphone.xml
share/applications/: follow-me_english.xml  follow-me_english_micro-off.xml  follow-me_english_micro-off_sim.xml  follow-me_english_micro-on.xml  follow-me_english_micro-on_sim.xml  follow-me_spanish.xml  follow-me_spanish_micro-off.xml  follow-me_spanish_micro-off_sim.xml  follow-me_spanish_micro-on.xml  follow-me_spanish_micro-on_sim.xml  teo-follow-me_english_micro-off.xml  teo-follow-me_english_micro-off_sim.xml  teo-follow-me_english_micro-on.xml  teo-follow-me_english_micro-on_sim.xml  teo-follow-me_spanish_micro-off.xml  teo-follow-me_spanish_micro-off_sim.xml  teo-follow-me_spanish_micro-on.xml  teo-follow-me_spanish_micro-on_sim.xml
